// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for color: contrast-high, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(68%) sepia(6%) saturate(108%) hue-rotate(187deg) brightness(104%) contrast(88%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-high, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(40%) sepia(2%) saturate(686%) hue-rotate(187deg) brightness(80%) contrast(94%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-low, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(20%) sepia(7%) saturate(421%) hue-rotate(202deg) brightness(97%) contrast(82%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-low, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(93%) sepia(11%) saturate(36%) hue-rotate(201deg) brightness(89%) contrast(102%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-medium, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(54%) sepia(4%) saturate(229%) hue-rotate(187deg) brightness(91%) contrast(84%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: contrast-medium, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(65%) sepia(6%) saturate(119%) hue-rotate(187deg) brightness(90%) contrast(92%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: inherit, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: inherit, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(28%) sepia(34%) saturate(3133%) hue-rotate(333deg) brightness(95%) contrast(100%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(25%) sepia(62%) saturate(2003%) hue-rotate(335deg) brightness(100%) contrast(97%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-info, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-info, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(59%) sepia(22%) saturate(1342%) hue-rotate(86deg) brightness(96%) contrast(88%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(62%) sepia(61%) saturate(551%) hue-rotate(86deg) brightness(86%) contrast(80%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(72%) sepia(94%) saturate(303%) hue-rotate(354deg) brightness(89%) contrast(94%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(74%) sepia(91%) saturate(343%) hue-rotate(348deg) brightness(92%) contrast(86%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, size: inherit and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  width: inherit;
  height: inherit;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, size: large and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, size: medium and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(100%) sepia(91%) saturate(38%) hue-rotate(254deg) brightness(110%) contrast(110%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, size: x-large and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, size: x-small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, size: xx-small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: .75rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: state-disabled, size: small and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(54%) sepia(4%) saturate(229%) hue-rotate(187deg) brightness(91%) contrast(84%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for color: state-disabled, size: small and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  margin: 0;
  padding: 0;
  filter: invert(65%) sepia(6%) saturate(119%) hue-rotate(187deg) brightness(90%) contrast(92%);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;
